<resources>
    <string name="app_name">DeviantArt</string>
    <string name="popular">Popular</string>
    <string name="newest">Newest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="watch">Watch</string>
    <string name="more_from_artist_header">More by this artist</string>
    <string name="retry">Retry</string>
    <string name="comment">Comment</string>
    <string name="daily_deviation">Daily Deviations</string>
    <string name="search">Search</string>
    <string name="topic">Topic</string>
    <string name="cancel">Cancel</string>
    <string name="browse">Browse</string>

    <string name="download">Download Image</string>
    <string name="copy_link">Copy link</string>
    <string name="error_save_image">Can not download this image</string>
    <string name="success_save_image">Image saved</string>
    <string name="literature">Literature</string>
    <string name="gallery">Gallery</string>
    <string name="journal">Journal</string>
    <string name="post">Post</string>
    <string name="favs">Favs</string>
    <string name="followers">Followers</string>
    <string name="comments">Comments</string>
    <string name="send_note">Send note</string>
    <string name="deviations">Deviations</string>
    <string name="pageviews">Pageviews</string>
    <string name="favorites">Favorites</string>
    <string name="watchers">Watchers</string>
    <string name="user_loading_error">Could not load. Try again later.</string>
    <string name="format_user_info_level">%s | %s</string>
</resources>